テストデータの削除

--- a/views/_pl_form.erb
+++ b/views/_pl_form.erb
@@ -56,7 +56,7 @@
          <td align="center">
            <input class="btn" type="button" value="ー" onclick="decrement_element('dl')">
          <td align="center">
-           <input class="input-small search-query" type="text" name="deadlift" maxlength='5'  id='dl' value="187.5" placeholder="input deadlift(kg)">
+           <input class="input-small search-query" type="text" name="deadlift" maxlength='5'  id='dl' value="" placeholder="input deadlift(kg)">
          </td>
          <td align="center">
            <input class="btn" type="button" value="＋" onclick="increment_element('dl')">
